hphp/hack/test/implemented_by_hhi/implemented_by_wrong_return_type.hhi
<?hh
function my_implementation(C $c): int;

final class C {
  <<__ImplementedBy('\my_implementation')>>
  public function myMethod(): string;
}
